# django-delights

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  docker-compose.override.yml  docker-compose.yml  locustfile.py  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
.agents/: Project_Decisions.md  Roadmap.md  cursor_task_creation_prompt.md
.agents/plans/: ACCESSIBILITY_IMPLEMENTATION_SUMMARY.md  Analysis-and- Improvement-plan.md  CICD_IMPLEMENTATION_SUMMARY.md  Improvement-Plan-Accessibility-UX.md  Improvement-Plan-CICD-DevOps.md  Improvement-Plan-Code-Quality.md  Improvement-Plan-Observability.md  Improvement-Plan-Performance.md  Improvement-Plan-Security.md  Improvement-Plan-Testing.md  OBSERVABILITY_IMPLEMENTATION.md  PERFORMANCE_IMPLEMENTATION_SUMMARY.md  Review-Summary.md  SECURITY_IMPLEMENTATION.md  TESTING_IMPLEMENTATION_SUMMARY.md  code_quality_implementation_summary.md
.claude/: settings.local.json
delights/: admin.py  apps.py  decorators.py  exceptions.py  forms.py  metrics.py  middleware.py  mixins.py  models.py  signals.py  tests.py  urls.py  urls_dishes.py  urls_ingredients.py  urls_menus.py  urls_purchases.py  urls_users.py  utils.py  views.py
delights/api/: __init__.py  permissions.py  renderers.py  serializers.py  urls.py  views.py
delights/fixtures/: README.md
delights/migrations/: 0001_initial.py  0002_auditlog.py  0003_add_performance_indexes.py  0006_add_auditlog_fields.py
delights/services/: __init__.py  availability.py  inventory.py  pricing.py  purchases.py
delights/templatetags/: currency.py
delights/tests/: __init__.py  conftest.py  factories.py  test_api.py  test_api_schema.py  test_concurrency.py  test_edge_cases.py  test_forms.py  test_integration.py  test_models.py  test_models_enhanced.py  test_performance.py  test_permissions.py  test_services.py  test_views.py
delights/tests/e2e/: README.md  conftest.py  test_auth_flow.py  test_dashboard.py  test_inventory.py  test_purchase_flow.py
delights/tests/snapshots/: api_schema.json
django_delights/: settings.py  urls.py
django_delights/settings/: __init__.py  base.py  dev.py  prod.py  staging.py
docs/: API.md  ARCHITECTURE.md  CICD_SETUP.md  DEPLOYMENT.md  DEVELOPMENT.md  MIGRATION_WORKFLOW.md  SECURITY.md  TESTING.md
scripts/: init-db.sql
static/css/: accessibility.css  responsive.css
templates/delights/: base.html
templates/delights/dashboard/: index.html
templates/delights/dishes/: add.html  detail.html  edit.html  list.html  requirements.html
templates/delights/ingredients/: add.html  adjust.html  edit.html  list.html
templates/delights/menus/: add.html  detail.html  edit.html  items.html  list.html
templates/delights/purchases/: add.html  confirm.html  detail.html  list.html
templates/delights/units/: add.html  edit.html  list.html
templates/delights/users/: add.html  edit.html  list.html  reset_password.html
templates/registration/: lockout.html  login.html
